--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task App</title>
+    <script src="https://kit.fontawesome.com/9ab4412437.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="app"></div>
