--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task App</title>
+    <title>Firetask</title>
     <script src="https://kit.fontawesome.com/9ab4412437.js" crossorigin="anonymous"></script>
   </head>
   <body>
